--- a/src/app/signup/page.module.scss
+++ b/src/app/signup/page.module.scss
@@ -11,25 +11,34 @@
     text-decoration: none;
     color: color.$main-color;
     font-size: 15px;
+    font-weight: 600;
   }
 
   .formBox {
-    width: 280px;
+    width: 300px;
     margin: 0 auto;
     border: 1px solid lightgray;
     border-radius: 4px;
     padding: 25px 50px;
     margin-bottom: 20px;
     text-align: center;
+
     h2 {
-      padding: 40px 0;
+      padding: 30px 0;
       width: 100%;
       text-align: center;
     }
-    form,
-    .socialLogin {
+    form {
       display: flex;
       flex-direction: column;
+      p {
+        font-weight: unset;
+        font-size: 12px;
+        padding: 5px 0;
+        a {
+          font-size: unset;
+        }
+      }
     }
     input {
       padding: 10px 15px;
@@ -44,6 +53,7 @@
       padding: 10px 0;
       background-color: color.$main-color;
       color: color.$secondary-text;
+      opacity: 0.7;
       font-size: 15px;
       border: none;
       border-radius: 10px;
@@ -53,11 +63,16 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 15px 0;
+      padding: 20px 0;
       span {
         font-size: 13px;
         color: color.$main-text-2;
       }
+    }
+    p {
+      color: color.$main-text-2;
+      font-weight: 600;
+      text-align: center;
     }
     .divider {
       width: 40%;
@@ -66,10 +81,17 @@
       margin-bottom: 2px;
     }
     #facebookLogin {
-      color: #385185;
-      margin-bottom: 20px;
-      font-size: 18px;
-      font-weight: 600;
+      color: color.$secondary-text;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 0;
+      font-size: 14px;
+      background-color: color.$main-color;
+      border: none;
+      border-radius: 8px;
+      margin-top: 15px;
     }
   }
   .loginFooter {
@@ -78,7 +100,7 @@
     left: 0;
     width: 100%;
     text-align: center;
-    p {
+    span {
       color: color.$main-text-2;
     }
   }
