update: side nav

--- a/src/app/signup/page.module.scss
+++ b/src/app/signup/page.module.scss
@@ -24,6 +24,7 @@
     text-align: center;
 
     h2 {
+      font-family: monospace;
       padding: 30px 0;
       width: 100%;
       text-align: center;
