--- a/src/app/login/page.module.scss
+++ b/src/app/login/page.module.scss
@@ -22,6 +22,7 @@
     margin-bottom: 20px;
     text-align: center;
     h2 {
+      font-family: monospace;
       padding: 40px 0;
       width: 100%;
       text-align: center;
