--- a/src/components/PostItem/index.module.scss
+++ b/src/components/PostItem/index.module.scss
@@ -1,3 +1,49 @@
+@use "../../style/color.scss";
 .postItemContainer{
-    
+    width: 500px;
+    padding: 20px;
+    border-bottom: 1px solid lightgray;
+    .postItemHeader {
+        position: relative;
+        display: flex;
+        .bluetext {
+            color: color.$main-color;
+            font-weight: 600;
+        }
+        div div{
+            display: flex;
+            align-items: center;
+        };
+        img{
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 2px solid red;
+            padding: 2px;
+            margin-right: 5px;
+            margin-bottom: 10px;
+        }
+        p{
+            height: 5px;
+        }
+        button{
+            position: absolute;
+            top: 10px;
+            right: 0px;
+            background-color: transparent;
+            border: none;
+        }
+    }
+    .postItemBody {
+        img{
+            width: 100%;
+            height: auto;
+        }
+        span{
+            //color: red;
+        }
+    }
+}
+.postItemContainer:last-child{
+    border-bottom: none;
 }
