--- a/src/app/direct/page.module.scss
+++ b/src/app/direct/page.module.scss
@@ -1,3 +1,64 @@
+@use '../../style/color.scss';
 .directContainer {
   padding-left: 250px;
+  .directSideBar {
+    height: calc(100vh - 60px);
+    width: 300px;
+    padding: 30px;
+    border-right: 1px solid lightgray;
+    .directHeader {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      margin: 15px 0;
+      .username {
+      }
+    }
+    .directList {
+      width: 100%;
+      .directTitle {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin: 15px 0;
+        h4:last-child {
+          font-weight: 500;
+          color: color.$main-text-2;
+          font-size: 15px;
+        }
+      }
+      .directItem {
+        width: 100%;
+        height: 50px;
+        margin: 15px 0;
+        display: flex;
+        align-items: center;
+        img {
+          height: 50px;
+          width: 50px;
+          border-radius: 50%;
+          margin-right: 12px;
+        }
+        div {
+          h4 {
+            width: 150px;
+            text-overflow: ellipsis;
+            margin-bottom: 5px;
+            font-weight: 500;
+          }
+          div {
+            color: color.$main-text-2;
+            display: flex;
+            align-items: center;
+            & > * {
+              margin-right: 5px;
+            }
+            p {
+              font-size: 13px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
